routes get ok + views

--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -8,9 +8,8 @@
     <%- include('./partials/navbar') %> 
 
     <div class="container">
-      <h1>Page d'accueil</h1>
-
+      <h1>Page articles</h1>
     </div>
-
+    
   </body>
 </html>
