--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,11 +6,11 @@
   </head>
   <body>
     <%- include('./partials/navbar') %> 
-
     <div class="container">
-      <h1>Page d'accueil</h1>
 
+      <h1>Page contact</h1>
     </div>
-
+    
   </body>
 </html>
+
