--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,13 +7,15 @@
   </head>
   <body>
     <div class="hand-navbar px-5">
-      <h3><a class="black" href="/">La Communauté</a></h3>
+      <h3><a class="black" href="/"> <span class="navbar-title">LA COM</span>MUNAUTÉ</a></h3>
 
       <div class="navbar-list">
-       <a href="#" class="black">Home</a>
-       <a href="#" class="black">Réalisations</a>
-       <a href="#" class="black">Équipe</a>
-       <a href="#" class="black">Contact</a>
+       <a href="/" class="black">Accueil</a>
+       <a href="/work" class="black">Notre Métier</a>
+       <a href="/projects" class="black">Nos Travaux</a>
+       <a href="/team" class="black">Notre Équipe</a>
+       <a href="/articles" class="black">Articles</a>
+       <a href="/contact" class="black">Contact</a>
       </div>
     </div>
   </body>
