--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@ body {
 .black:hover{
   color: black;
   text-decoration: none;
+  font-weight: bold;
+}
+
+.container{
+  margin-top: 3em;
 }
 
 /* =============================
@@ -29,5 +34,9 @@ body {
   align-items: center;
   justify-content: space-evenly;
   font-size: 1.4em;
-  width: 30%;
+  width: 50%;
+}
+
+.navbar-title{
+  font-weight: bold !important;
 }
