--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -6,11 +6,10 @@
   </head>
   <body>
     <%- include('./partials/navbar') %> 
-
     <div class="container">
-      <h1>Page d'accueil</h1>
-
+      <h1>Page Travaux</h1>
     </div>
-
+    
   </body>
 </html>
+
