--- a/views/work.ejs
+++ b/views/work.ejs
@@ -6,11 +6,9 @@
   </head>
   <body>
     <%- include('./partials/navbar') %> 
-
     <div class="container">
-      <h1>Page d'accueil</h1>
-
+      <h1>Page work</h1>
     </div>
-
+    
   </body>
 </html>
