Articles --> Nos Articles

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,7 +14,7 @@
        <a href="/work" class="black">Notre Métier</a>
        <a href="/projects" class="black">Nos Travaux</a>
        <a href="/team" class="black">Notre Équipe</a>
-       <a href="/articles" class="black">Articles</a>
+       <a href="/articles" class="black">Nos Articles</a>
        <a href="/contact" class="black">Contact</a>
       </div>
     </div>
