--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,12 +10,12 @@
       <h3><a class="black" href="/"> <span class="navbar-title">LA COM</span>MUNAUTÉ</a></h3>
 
       <div class="navbar-list">
-       <a href="/" class="black">Accueil</a>
-       <a href="/work" class="black">Notre Métier</a>
-       <a href="/projects" class="black">Nos Travaux</a>
-       <a href="/team" class="black">Notre Équipe</a>
-       <a href="/articles" class="black">Nos Articles</a>
-       <a href="/contact" class="black">Contact</a>
+       <a href="/" class="black link">Accueil</a>
+       <a href="/work" class="black link">Notre Métier</a>
+       <a href="/projects" class="black link">Nos Travaux</a>
+       <a href="/team" class="black link">Notre Équipe</a>
+       <a href="/articles" class="black link">Nos Articles</a>
+       <a href="/contact" class="black link">Contact</a>
       </div>
     </div>
   </body>
