--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,9 @@ body {
 .black:hover{
   color: black;
   text-decoration: none;
+}
+
+.link:hover{
   font-weight: bold;
 }
 
@@ -34,7 +37,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   font-size: 1.4em;
-  width: 50%;
+  width: 55%;
 }
 
 .navbar-title{
