--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,14 @@
 body {
-  padding: 50px;
   font: 14px "Montserrat", Arial, sans-serif;
 }
+
 
 /* =============================
               Générique
 =============================== */
 .black{
   color: black;
+  text-decoration: none;
 }
 .black:hover{
   color: black;
@@ -20,6 +21,8 @@ body {
 
 .container{
   margin-top: 3em;
+  padding-left: 3em;
+  padding-right: 3em;
 }
 
 /* =============================
@@ -27,9 +30,9 @@ body {
 =============================== */
 
 .hand-navbar{
-  width: 100%;
   display: flex;
   justify-content: space-between;
+  padding: 2em;
 }
 
 .navbar-list{
@@ -41,5 +44,5 @@ body {
 }
 
 .navbar-title{
-  font-weight: bold !important;
+  font-weight: lighter ;
 }
