changed navlink nameé

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,11 +9,10 @@
       <h1><a class="black" href="/">LA COM<span class="navbar-title">MUNAUTÉ</span></a></h1>
 
       <div class="navbar-list">
-       <a href="/" class="black link">Accueil</a>
-       <a href="/work" class="black link">Notre Métier</a>
-       <a href="/projects" class="black link">Nos Travaux</a>
-       <a href="/team" class="black link">Notre Équipe</a>
-       <a href="/articles" class="black link">Nos Articles</a>
+       <a href="/work" class="black link">Métiers</a>
+       <a href="/projects" class="black link">Réalisations</a>
+       <a href="/team" class="black link">Équipe</a>
+       <a href="/articles" class="black link">Articles</a>
        <a href="/contact" class="black link">Contact</a>
       </div>
     </div>
