--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,8 +9,19 @@
     <div class="container">
 
       <h1>Page contact</h1>
-    </div>
-    
+
+      <form action="/contact" method="POST">
+        <div>
+          <div class="form-block ">
+            <label>Titre</label>
+            <input type="text" placeholder="Montjoie! Saint-Denis, ..." name="email">
+          </div >
+          <div >
+            <label>Lieu</label>
+            <input type="text" placeholder="Acc.mie Fratellini,  ..." name="content">
+          </div>
+        </div>
+      </div>
   </body>
 </html>
 
