minor modifs in DB config - creation routes / pages articles - deleted user related files

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div class="hand-navbar">
-      <h1><a class="black" href="/">LA COM<span class="navbar-title">MUNAUTÉ</span></a></h1>
+</head>
 
-      <div class="navbar-list">
-       <a href="/work" class="black link">Métiers</a>
-       <a href="/projects" class="black link">Réalisations</a>
-       <a href="/team" class="black link">Équipe</a>
-       <a href="/articles" class="black link">Articles</a>
-       <a href="/contact" class="black link">Contact</a>
-      </div>
+<body>
+    <div class="hand-navbar">
+        <h1><a class="black" href="/">LA COM<span class="navbar-title">MUNAUTÉ</span></a></h1>
+
+        <div class="navbar-list">
+            <a href="/work" class="black link">Métiers</a>
+            <a href="/projects" class="black link">Réalisations</a>
+            <a href="/team" class="black link">Équipe</a>
+            <a href="/articlesList" class="black link">Articles</a>
+            <a href="/contact" class="black link">Contact</a>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
