--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,21 +10,24 @@
 
       <h2>Nous contacter</h2>
 
-      <form action="/contact" method="POST">
-        <div>
-          <div class="form-block">
-            <label>Titre</label> <br/>
-            <input type="text" class="form-input" placeholder="Email" name="email">
+      <div class="victor">
+        <form action="/contact" method="POST">
+          <div>
+            <div class="form-block">
+              <label>Email</label> <br/>
+              <input type="text" class="form-input" placeholder="exemple@gmail.com" name="email">
+            </div>
+            <div class="form-block">
+              <label>Message</label> <br/>
+              <textarea name="content" placeholder="Expliquez-nous votre besoin..."></textarea>
+            </div>
           </div>
-          <div class="form-block">
-            <label>Lieu</label> <br/>
-            <input type="text" class="form-input" placeholder="Message" name="content">
-          </div>
-        </div>
 
-        <button class="btn">Envoyer</button>
-      </form>
+          <button class="btn">Envoyer</button>
+        </form>
       </div>
+      </div>
+  <script src="/javascripts/script1.js"></script>
   </body>
 </html>
 
