--- a/views/team.ejs
+++ b/views/team.ejs
@@ -7,7 +7,7 @@
   <body>
     <%- include('./partials/navbar') %> 
     <div class="container">
-      <h1>Page Team</h1>
+      <h1>Notre Équipe</h1>
     </div>
     
 
