--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <div class="hand-navbar">
+    <header>
       <h1><a class="black" href="/">LA COM<span class="navbar-title">MUNAUTÉ</span></a></h1>
+      <nav>
 
-      <div class="navbar-list">
-       <a href="/work" class="black link">Métiers</a>
-       <a href="/projects" class="black link">Réalisations</a>
-       <a href="/team" class="black link">Équipe</a>
-       <a href="/articles" class="black link">Articles</a>
-       <a href="/contact" class="black link">Contact</a>
-      </div>
-    </div>
-  </body>
+        <a href="/work" class="black link">
+          <span data-span="Métiers" class="link">
+            Métiers
+          </span>
+        </a>
+        <a href="/projects" class="black link">
+          <span data-span="Réalisations" class="link">
+            Réalisations
+          </span>
+        </a><a href="/team" class="black link">
+          <span data-span="Équipe" class="link">
+            Équipe
+          </span>
+        </a><a href="/articles" class="black link">
+          <span data-span="Articles" class="link">
+            Articles
+          </span>
+        </a><a href="/contact" class="black link">
+          <span data-span="Contact" class="link">
+            Contact
+          </span>
+        </a>
+      </nav>
+    </header>
+    <body>
+    </body>
 </html>
