mise en place transition fiche contact - creation routes / pages article(s)

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-
 <body>
     <div class="hand-navbar">
         <h1><a class="black" href="/">LA COM<span class="navbar-title">MUNAUTÉ</span></a></h1>
@@ -15,7 +10,7 @@
             <a href="/projects" class="black link">Réalisations</a>
             <a href="/team" class="black link">Équipe</a>
             <a href="/articlesList" class="black link">Articles</a>
-            <a href="/contact" class="black link">Contact</a>
+            <p id="contact" class="black link" onClick="decide(this.id)">Contact</p>
         </div>
     </div>
 </body>
