--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,82 +1,113 @@
 body {
-  font: 14px "Montserrat", Arial, sans-serif;
-}
-
-
-/* =============================
-              Générique
-=============================== */
-.black{
-  color: black;
-  text-decoration: none;
-}
-.black:hover{
-  color: black;
-  text-decoration: none;
-}
-
-.link:hover{
-  font-weight: bold;
-}
-
-.container{
-  margin-top: 3em;
-  padding-left: 3em;
-  padding-right: 3em;
-}
-
-button{
-  font-family: 'Montserrat', Arial, sans-serif;
-  font-size: 1.4em;
-  padding: 0.6em;
-  border-radius: 8px;
-  box-shadow: none;
-  background-color: black;
-  color: #ccc;
-  border: black;
+	font: 14px "Montserrat", Arial, sans-serif;
 }
 
 /* =============================
-              Navbar
+                Générique
 =============================== */
-
-.hand-navbar{
-  display: flex;
-  justify-content: space-between;
-  padding: 2em;
+.black {
+	color: black;
+	text-decoration: none;
+}
+.black:hover {
+	color: black;
+	text-decoration: none;
 }
 
-.navbar-list{
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: 1.4em;
-  width: 40%;
+.link:hover {
+	font-weight: bold;
 }
 
-.navbar-title{
-  font-weight: lighter ;
+.container {
+	margin-top: 3em;
+	padding-left: 3em;
+	padding-right: 3em;
+}
+
+button {
+	font-family: "Montserrat", Arial, sans-serif;
+	font-size: 1.4em;
+	padding: 0.6em;
+	border-radius: 8px;
+	box-shadow: none;
+	background-color: black;
+	color: #ccc;
+	border: black;
 }
 
 /* =============================
-              Form
+                Navbar
 =============================== */
-.form-block{
-  font-size: 1.5em;
-  margin-top: 2em;
-  margin-bottom: 2em;
+
+.hand-navbar {
+	display: flex;
+	justify-content: space-between;
+	padding: 2em;
 }
 
-input{
-  font-family: 'Montserrat', Arial, sans-serif;
-  font-size: 0.7em;
-  padding: 0.5em;
-  width: 30em;
-  margin-top: 0.5em;
-  border: none;
-  border-bottom: 1px solid #ccc  ;
+.navbar-list {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	font-size: 1.4em;
+	width: 40%;
 }
 
-input:focus{
-  outline: none;
+.navbar-title {
+	font-weight: lighter;
+}
+
+/* =============================
+                Form
+=============================== */
+.form-block {
+	font-size: 1.5em;
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+input {
+	font-family: "Montserrat", Arial, sans-serif;
+	font-size: 0.7em;
+	padding: 0.5em;
+	width: 30em;
+	margin-top: 0.5em;
+	border: none;
+	border-bottom: 1px solid #ccc;
+}
+
+input:focus {
+	outline: none;
+}
+
+/* ====================================
+                Page ARTCILE
+====================================== */
+
+.form-testing {
+	height: 100%;
+	width: 0%;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	right: 0;
+	margin-top: 150px;
+	overflow-x: hidden;
+	padding-top: 60px;
+	transition: 2s;
+	background-color: black;
+}
+
+.main-testing {
+	transition: 2s;
+	background-color: goldenrod;
+}
+
+.form-toggle {
+	width: 40%;
+	background-color: white;
+}
+
+.main-toggle {
+	margin-right: 40%;
 }
