--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,8 +24,8 @@
             Articles
           </span>
         </a>
-        <button class="black">
-          <span data-span="Contact" onClick="decide()" class="link">
+        <button>
+          <span data-span="Contact" onClick="decide()">
             Contact
           </span>
         </button>
