--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,10 +23,6 @@ body {
   color: black;
 }
 
-.link:hover {
-	font-weight: bold;
-}
-
 .container {
 	margin-top: 3em;
 	padding-left: 3em;
@@ -48,6 +44,10 @@ button:focus{
   outline: none;
 }
 
+h1{
+  font-size: 2rem;
+}
+
 /* =============================
                 Navbar
 =============================== */
@@ -67,7 +67,11 @@ nav{
 }
 
 .navbar-title {
-	font-weight: lighter;
+  font-weight: bold;
+}
+
+#navbar-title{
+  font-size: 1.4rem;
 }
 
 header nav > a {
@@ -171,7 +175,7 @@ textarea:focus{
 
 /* ====================================
                 Page ARTCILE
- ==================*/
+ ======================================*/
 
 .form-testing {
 	height: 100%;
