--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-      <h1><a class="black" href="/">LA COM<span class="navbar-title">MUNAUTÉ</span></a></h1>
+      <p id="navbar-title"><a class="black" href="/"><span class="navbar-title">LA COM</span>MUNAUTÉ</a></p>
       <nav>
 
         <a href="/work" class="black link">
