started team paage

--- a/views/team.ejs
+++ b/views/team.ejs
@@ -7,9 +7,32 @@
   <body>
     <%- include('./partials/navbar') %> 
     <div class="container">
-      <h1>Notre Équipe</h1>
-    </div>
-    
+      <h1 class="team-title">Notre Équipe</h1>
 
+      <div class="team-row">
+   
+        <div class="person">
+            <img alt="Photo de" class="portrait" src=/images/person1.jpg />
+            <p class="job-title">MÉTIER</p>
+            <p class="name">PRÉNOM NOM</p>
+            <p class="presentation">Une présentation de la personne en une phrase ou deux. Une présentation de la personne en une phrase ou deux. Une présentation </p>
+        </div>
+
+        <div class="person">
+          <img alt="Photo de" class="portrait" src=/images/person2.jpg />
+          <p class="job-title">MÉTIER</p>
+          <p class="name">PRÉNOM NOM</p>
+          <p class="presentation">Une présentation de la personne en une phrase ou deux. Une présentation de la personne en une phrase ou deux. Une présentation </p>
+        </div>
+
+        <div class="person">
+          <img alt="Photo de" class="portrait" src=/images/person3.jpg />
+          <p class="job-title">MÉTIER</p>
+          <p class="name">PRÉNOM NOM</p>
+          <p class="presentation">Une présentation de la personne en une phrase ou deux. Une présentation de la personne en une phrase ou deux. Une présentation </p>
+       </div>
+      </div>
+  </div>
   </body>
 </html>
+ 
