tests on articleList page

--- a/views/articlesList.ejs
+++ b/views/articlesList.ejs
@@ -14,68 +14,107 @@
         <p>Ici vous allez apprendre pleins de trucs et construire l'envie de nous donner beaucoup d'argent</p>
     </div>
 
-    <article class="post_lists" style="font-size: 18px !important; line-height: 27px !important;">
-        <div class="post_left" style="font-size: 18px !important;">
-            <a href="https://www.successagency.com/growth/2019/11/13/success-omnichannel-marketing/"
-                style="font-size: 18px !important;">
-                <img src="https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-470x340.jpg"
-                    alt=""
-                    srcset="https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-470x340.jpg 470w, https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-300x217.jpg 300w, https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured.jpg 680w"
-                    sizes="(max-width: 470px) 100vw, 470px" width="470" height="340">
-        </div>
-
-        <div class="post_right" style="font-size: 18px !important; line-height: 27px !important;">
-            <div class="box-comment" style="font-size: 18px !important; line-height: 27px !important;">
-                <div class="post_date" style="font-size: 18px !important; line-height: 14px !important;">
-                    <span class="date" style="font-size: 24px !important; line-height: 24px !important;">13</span>
-                    <span class="month" style="font-size: 12px !important; line-height: 14px !important;">Nov</span>
-                </div>
-            </div>
-
-            <div class="box-comment_mob" style="font-size: 18px !important; line-height: 27px !important;">
-                <div class="post_date" style="font-size: 18px !important; line-height: 14px !important;">
-                    <span class="date" style="font-size: 24px !important; line-height: 24px !important;">Nov 13,</span>
-                    <span class="year" style="font-size: 18px !important; line-height: 14px !important;"> 2019</span>
-                </div>
-            </div>
-
-            <div class="content_post" style="font-size: 18px !important; line-height: 27px !important;">
-                <h3 class="title" style="font-size: 30px !important; line-height: 32.7333px !important;"><a
-                        href="https://www.successagency.com/growth/2019/11/13/success-omnichannel-marketing/"
-                        style="font-size: 30px !important; line-height: 32.7333px !important;">Success with Omnichannel
-                        Marketing – Real Examples You Can Put to Work for You</a></h3>
-                <div class="other_thing" style="font-size: 13px !important; line-height: 19.5px !important;">
-                    by <a href="https://www.successagency.com/growth/author/lauranarusyte/" class="author_link"
-                        style="font-size: 13px !important; line-height: 15px !important;">
-                        Laura Narušytė</a> in
-                    <a href="https://www.successagency.com/growth/category/marketing/" rel="category tag"
-                        style="font-size: 13px !important; line-height: 15px !important;">Marketing</a> </div>
-                <div class="at-above-post-homepage addthis_tool"
-                    data-url="https://www.successagency.com/growth/2019/11/13/success-omnichannel-marketing/"
-                    style="font-size: 18px !important;"></div>
-                <p style="font-size: 20px !important; line-height: 30px !important;">Find out what omnichannel marketing
-                    is and how your eCommerce business can reap the benefits of an omnichannel approach.
-                    <!-- AddThis Advanced Settings above via filter on get_the_excerpt -->
-                    <!-- AddThis Advanced Settings below via filter on get_the_excerpt -->
-                    <!-- AddThis Advanced Settings generic via filter on get_the_excerpt -->
-                    <!-- AddThis Share Buttons above via filter on get_the_excerpt -->
-                    <!-- AddThis Share Buttons below via filter on get_the_excerpt -->
-                </p>
-                <div class="at-below-post-homepage addthis_tool"
-                    data-url="https://www.successagency.com/growth/2019/11/13/success-omnichannel-marketing/"
-                    style="font-size: 18px !important;"></div>
-                <p style="font-size: 20px !important;">
-                    <!-- AddThis Share Buttons generic via filter on get_the_excerpt -->
-                </p>
-                <a href="https://www.successagency.com/growth/2019/11/13/success-omnichannel-marketing/"
-                    class="readmore" style="font-size: 15px !important; line-height: 40px !important;">Continue
-                    Reading</a>
-                </a>
-            </div>
-
-            <div class="clear" style="font-size: 18px !important;"></div>
+    <!-- // ici le script va montrer les differents articles
+    // <% for(let i = 0; i < 0; i++) { %>
+    // il nous faut aussi des icones like sur les articles ainsi qu'une option pour le recevoir par mail
+    <article>
+        <a href="">
+            <img src="" alt="">
+        </a>
+        <div>
+            <title>Construire une stratégie Marketing</title>
+            <p>
+                <span>autheur: Nathan Bruyère sur les themes du marketing, référencement</span>
+                <span>temps de lecture 8 minutes</span>
+                Vous vous sentez frustré que votre stratégie de marketing de contenu ne semble pas donner de résultats?
+                Il est peut-être temps de changer un peu les choses.
+            </p>
+            <button href="">Lire l'article</button>
         </div>
     </article>
+
+    //<% }; %> -->
+
+    <ul>
+        <li class="article-card">
+            <a href="">
+                <img class="article-card-image"
+                    src="https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-470x340.jpg"
+                    alt="">
+            </a>
+            <div class="description-article">
+                <title>Construire une stratégie Marketing</title>
+                <p>
+                    <span>autheur:
+                        <span>Nathan Bruyère</span>
+                        <span>sur les themes du</span>
+                        <span>Marketing<span>
+                                <span>SEO<span>
+                                    </span>
+                                    <span class="article-card-readTime">temps de lecture 8 minutes</span>
+                                    Vous vous sentez frustré que votre stratégie de marketing de contenu ne semble pas
+                                    donner de
+                                    résultats?
+                                    Il est peut-être temps de changer un peu les choses.
+                </p>
+                <button href="">Lire l'article</button>
+            </div>
+        </li>
+        <li class="article-card">
+            <a href="">
+                <img class="card-image"
+                    src="https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-470x340.jpg"
+                    alt="">
+            </a>
+            <div class="description-article">
+                <title>Construire une stratégie Marketing</title>
+                <p>
+                    <span>autheur: Nathan Bruyère sur les themes du marketing, référencement</span>
+                    <span>temps de lecture 8 minutes</span>
+                    Vous vous sentez frustré que votre stratégie de marketing de contenu ne semble pas donner de
+                    résultats?
+                    Il est peut-être temps de changer un peu les choses.
+                </p>
+                <button href="">Lire l'article</button>
+            </div>
+        </li>
+        <li class="article-card">
+            <a href="">
+                <img class="card-image"
+                    src="https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-470x340.jpg"
+                    alt="">
+            </a>
+            <div class="description-article">
+                <title>Construire une stratégie Marketing</title>
+                <p>
+                    <span>autheur: Nathan Bruyère sur les themes du marketing, référencement</span>
+                    <span>temps de lecture 8 minutes</span>
+                    Vous vous sentez frustré que votre stratégie de marketing de contenu ne semble pas donner de
+                    résultats?
+                    Il est peut-être temps de changer un peu les choses.
+                </p>
+                <button href="">Lire l'article</button>
+            </div>
+        </li>
+        <li class="article-card">
+            <a href="">
+                <img class="card-image"
+                    src="https://www.successagency.com/growth/wp-content/uploads/2019/11/omnichannelmarketing-featured-470x340.jpg"
+                    alt="">
+            </a>
+            <div class="description-article">
+                <title>Construire une stratégie Marketing</title>
+                <p>
+                    <span>autheur: Nathan Bruyère sur les themes du marketing, référencement</span>
+                    <span>temps de lecture 8 minutes</span>
+                    Vous vous sentez frustré que votre stratégie de marketing de contenu ne semble pas donner de
+                    résultats?
+                    Il est peut-être temps de changer un peu les choses.
+                </p>
+                <button href="">Lire l'article</button>
+            </div>
+        </li>
+    </ul>
 
 </body>
 
