--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,10 +2,9 @@ body {
 	font: 14px "Montserrat", Arial, sans-serif;
 }
 
-*{
-  box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
-
 
 /* =============================
                 Générique
@@ -19,8 +18,8 @@ body {
 	text-decoration: none;
 }
 
-.link{
-  color: black;
+.link {
+	color: black;
 }
 
 .link:hover {
@@ -48,18 +47,18 @@ button {
                 Navbar
 =============================== */
 
-header{
-  display: flex;
-  justify-content: space-between;
-  padding: 2em;
+header {
+	display: flex;
+	justify-content: space-between;
+	padding: 2em;
 }
 
-nav{
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: 1.4em;
-  width: 50%;
+nav {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	font-size: 1.4em;
+	width: 50%;
 }
 
 .navbar-title {
@@ -67,29 +66,28 @@ nav{
 }
 
 header nav > a {
-  overflow:hidden;
+	overflow: hidden;
 }
 
-header nav a > span:first-child{
-  position: relative;
-  display: inline-block;
-  transform: translateY(0); 
-  transition: transform .5s;
+header nav a > span:first-child {
+	position: relative;
+	display: inline-block;
+	transform: translateY(0);
+	transition: transform 0.5s;
 }
 
 header nav a > span:after {
-  transition: .5s linear;  
-  position: absolute;
-  content: attr(data-span);
-  top:100%;
-  left:0;
-  color: red;
-  font-weight: bold;
+	transition: 0.5s linear;
+	position: absolute;
+	content: attr(data-span);
+	top: 100%;
+	left: 0;
+	color: red;
+	font-weight: bold;
 }
 
-header nav a > span:hover{
-
-  transform: translateY(-100%);   
+header nav a > span:hover {
+	transform: translateY(-100%);
 }
 
 /* =============================
@@ -115,59 +113,86 @@ input:focus {
 	outline: none;
 }
 
-
-input{
-  font-family: 'Montserrat', Arial, sans-serif;
-  font-size: 1rem;
-  padding: 0.5em;
-  width: 100%;
-  margin-top: 0.5em;
-  border: none;
+input {
+	font-family: "Montserrat", Arial, sans-serif;
+	font-size: 1rem;
+	padding: 0.5em;
+	width: 100%;
+	margin-top: 0.5em;
+	border: none;
 }
 
-input:focus{
-  outline: none;
+input:focus {
+	outline: none;
 }
 
-.form-block:after{
-  display: flex;
-  content: "";
-  color: transparent;
-  height: 2px;
-  background-size: 200%;
-  background-image: linear-gradient(to left, #cccccc 50%, red 50% );
-  transition: background-position .5s .15s ease-out;
-  background-position: right;
+.form-block:after {
+	display: flex;
+	content: "";
+	color: transparent;
+	height: 2px;
+	background-size: 200%;
+	background-image: linear-gradient(to left, #cccccc 50%, red 50%);
+	transition: background-position 0.5s 0.15s ease-out;
+	background-position: right;
 }
 
-.form-block:focus-within:after{
-  background-position: left;
+.form-block:focus-within:after {
+	background-position: left;
 }
 
-
-textarea{
-  font-family: 'Montserrat', Arial, sans-serif;
-  font-size: 1rem;
-  padding: 0.5em;
-  width: 100%;
-  margin-top: 0.5em;
-  border: none;
-  resize: none;
-  overflow: hidden;
-  overflow-wrap: break-word;
+textarea {
+	font-family: "Montserrat", Arial, sans-serif;
+	font-size: 1rem;
+	padding: 0.5em;
+	width: 100%;
+	margin-top: 0.5em;
+	border: none;
+	resize: none;
+	overflow: hidden;
+	overflow-wrap: break-word;
 }
 
-textarea:focus{
-  outline: none;
+textarea:focus {
+	outline: none;
 }
 
-.victor{
-  width: 40%;
+.victor {
+	width: 40%;
+}
+
+/* ====================================
+                Page LISTE ARTCILES
+====================================*/
+
+ul {
+	padding-left: 5%;
+	padding-right: 5%;
+	margin-left: -35px;
+	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.article-card {
+	display: flex;
+	flex-wrap: wrap;
+	overflow: hidden;
+	min-width: 300px;
+	width: 33%;
+	padding-left: 35px;
+	padding-bottom: 35px;
+}
+
+.card-image {
+	height: 200px;
+	object-fit: cover;
 }
 
 /* ====================================
                 Page ARTCILE
- ==================*/
+====================================*/
 
 .form-testing {
 	height: 100%;
